change input-placeholder namespacing

--- a/src/styles/base/forms.less
+++ b/src/styles/base/forms.less
@@ -69,8 +69,8 @@
         }
     }
 
-    // Placeholder color
-    .placeholder();
+    // Input placeholder color
+    .input-placeholder();
 
 }
 .use-forms(@use-forms);
