--- a/src/styles/base/mixins/input-placeholder.less
+++ b/src/styles/base/mixins/input-placeholder.less
@@ -1,7 +1,7 @@
 //
-// Placeholder text
+// Input-placeholder
 // -------------------------------------------------------
-.placeholder(@color: @input-placeholder-color, @hover-color: @input-placeholder-hover-color) {
+.input-placeholder(@color: @input-placeholder-color, @hover-color: @input-placeholder-hover-color) {
     ::placeholder {
         color: @color;
         transition: color @transition-duration-default @transition-easing-default;
