--- a/src/styles/base/mixins.less
+++ b/src/styles/base/mixins.less
@@ -11,10 +11,10 @@
     @import 'mixins/grid-framework';
     @import 'mixins/grid';
     @import 'mixins/hide-text';
+    @import 'mixins/input-placeholder';
     @import 'mixins/media-queries';
     @import 'mixins/modular-scale';
     @import 'mixins/momentum-scrolling';
-    @import 'mixins/placeholder';
     @import 'mixins/rgba';
     @import 'mixins/text-overflow';
     @import 'mixins/pretty-scrollbars';
