--- a/src/styles/objects/animate.less
+++ b/src/styles/objects/animate.less
@@ -10,7 +10,7 @@
       animation-fill-mode: both;
     }
 
-    .animated.infinite {
+    .animated--infinite {
       animation-iteration-count: infinite;
     }
 
