--- a/src/styles/objects/animate/bounceInLeft.less
+++ b/src/styles/objects/animate/bounceInLeft.less
@@ -1,7 +1,7 @@
 @keyframes bounceInLeft {
     0% {
         opacity: 0;
-        transform: translateX(-2000px);
+        transform: translateX(-100%);
     }
 
     60% {
