--- a/src/styles/objects/animate/bounceInDown.less
+++ b/src/styles/objects/animate/bounceInDown.less
@@ -1,7 +1,7 @@
 @keyframes bounceInDown {
     0% {
         opacity: 0;
-        transform: translateY(-2000px);
+        transform: translateY(-100%);
     }
 
     60% {
