--- a/src/styles/objects/animate/bounceInRight.less
+++ b/src/styles/objects/animate/bounceInRight.less
@@ -1,7 +1,7 @@
 @keyframes bounceInRight {
     0% {
         opacity: 0;
-        transform: translateX(2000px);
+        transform: translateX(100%);
     }
 
     60% {
