--- a/templates/_iconfont/icons.less
+++ b/templates/_iconfont/icons.less
@@ -56,11 +56,11 @@
         }
     }
 
-    .icon--lg:before { font-size: 1.5em; }
-    .icon--2x:before { font-size: 2em; }
-    .icon--3x:before { font-size: 3em; }
-    .icon--4x:before { font-size: 4em; }
-    .icon--5x:before { font-size: 5em; }
+    .icon--lg:before { font-size: (@icon-font-size * 1.5); }
+    .icon--2x:before { font-size: (@icon-font-size * 2); }
+    .icon--3x:before { font-size: (@icon-font-size * 3); }
+    .icon--4x:before { font-size: (@icon-font-size * 4); }
+    .icon--5x:before { font-size: (@icon-font-size * 5); }
 
 
     // Insert icon styles here
