css documentation, spacings

--- a/src/styles/base/tables.less
+++ b/src/styles/base/tables.less
@@ -6,7 +6,7 @@
     table {
         width: 100%;
         empty-cells: show;
-        word-wrap: break-word; // for css3 browsers
+        word-wrap: break-word; // for CSS3 browsers
         text-align: left;
     }
 
