--- a/src/styles/base/horizontal-rule.less
+++ b/src/styles/base/horizontal-rule.less
@@ -3,7 +3,8 @@
 // -------------------------------------------------------
 .horizontal-rule(@boolean) when (@boolean = true) {
 
-    hr, .hr {
+    hr,
+    .hr {
         border: solid @hr-color;
         border-width: 1px 0 0 0;
         clear: both;
