add new utility classes

--- a/src/styles/base/variables.less
+++ b/src/styles/base/variables.less
@@ -2,9 +2,8 @@
 // -------------------------------------------------------
 // Enabling current media query, displays currently used
 // media query.
-// DO NOT USE THESE IN PRODUCTION!
+// DO NOT USE IN PRODUCTION!
 @use-current-media-query:       true;
-@use-debug:                     false;
 
 
 // GRID & BREAKPOINTS
@@ -335,9 +334,12 @@
 @use-display:                   true;
 @use-flex-alignment:            true;
 @use-floats:                    true;
-@use-grid:                      true;
 @use-text-alignment:            true;
 @use-text-color:                true;
 @use-text-weight:               true;
 @use-tools:                     true;
 @use-visibility:                true;
+@use-vertical-align:            true;
+@use-widths:                    true;
+
+
