--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -9,7 +9,6 @@
     @import 'base/mixins';
 
     // Utilities for development
-    @import 'utilities/debug';
     @import 'utilities/current-media-query';
 
     // Base CSS
@@ -45,6 +44,7 @@
     @import 'utilities/text-color';
     @import 'utilities/tools';
     @import 'utilities/visibility';
+    @import 'utilities/vertical-align';
     @import 'utilities/widths';
 
     // Vendor and external stylesheets
