--- a/src/styles/utilities/text-alignment.less
+++ b/src/styles/utilities/text-alignment.less
@@ -14,9 +14,17 @@
     .u-text-center {
         text-align: center !important;
     }
-    
+
     .u-text-justify {
         text-align: justify !important;
+    }
+
+    .u-text-truncate {
+        .text-overflow();
+    }
+
+    .u-text-nowrap {
+        white-space: nowrap !important;
     }
 
 }
