--- a/src/styles/utilities/widths.less
+++ b/src/styles/utilities/widths.less
@@ -1,7 +1,7 @@
 //
 // Utilities – Widths
 // -------------------------------------------------------
-.use-grid(@boolean) when (@boolean =true) {
+.use-widths(@boolean) when (@boolean =true) {
 
 
     // Small Grid for Mobile devices
@@ -38,4 +38,4 @@
     .use-screen-xl(@use-screen-xl);
 }
 
-.use-grid(@use-grid);
+.use-widths(@use-widths);
