--- a/src/styles/objects/animate/shake.less
+++ b/src/styles/objects/animate/shake.less
@@ -1,5 +1,6 @@
 @keyframes shake {
-    0%, 100% {
+    0%,
+    100% {
         transform: translateX(0);
     }
     10%,
@@ -16,6 +17,7 @@
         transform: translateX(@spacing-half);
     }
 }
+
 .shake {
     animation-name: shake;
 }
