--- a/src/styles/objects/animate/bounce.less
+++ b/src/styles/objects/animate/bounce.less
@@ -1,7 +1,17 @@
 @keyframes bounce {
-    0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
-    40% {transform: translateY(-100%);}
-    60% {transform: translateY(-50%);}
+    0%,
+    20%,
+    50%,
+    80%,
+    100% {
+        transform: translateY(0);
+    }
+    40% {
+        transform: translateY(-100%);
+    }
+    60% {
+        transform: translateY(-50%);
+    }
 }
 
 .bounce {
