--- a/src/styles/base/variables.less
+++ b/src/styles/base/variables.less
@@ -76,7 +76,7 @@
 //@font-face {.font-face('Raleway', 'Raleway-Regular', 400, normal);}
 //@font-face {.font-face('Raleway', 'Raleway-Bold', 700, normal);}
 
-@base-font-family:              "proxima-nova", sans-serif;
+@base-font-family:              sans-serif;
 @heading-font-family:           @base-font-family;
 @blockquote-font-family:        @base-font-family;
 
@@ -148,12 +148,18 @@
 @color-youtube:                 #cd201f;
 
 // Basic colors for body
-@base-background:               @white;
 @base-color:                    @grey-800;
+@base-background:               @white;
 @base-link-color:               @color-primary;
 
 // Selections
 @selection-background:          rgba(red(@color-primary), green(@color-primary), blue(@color-primary), .6);
+
+// Code
+@code-color:                    @color-error;
+@code-background:               @grey-25;
+@pre-color:                     @color-error;
+@pre-background:                @grey-25;
 
 // Hr
 @hr-color:                      @grey-100;
