icons gulp workflow fixes

--- a/src/styles/objects/icons.less
+++ b/src/styles/objects/icons.less
@@ -21,7 +21,7 @@
         }
     }
 
-    .icon--lg:before { font-size: (@icon-font-size * 1.5); }
+    .icon--large:before { font-size: (@icon-font-size * 1.5); }
     .icon--2x:before { font-size: (@icon-font-size * 2); }
     .icon--3x:before { font-size: (@icon-font-size * 3); }
     .icon--4x:before { font-size: (@icon-font-size * 4); }
