--- a/src/styles/objects/tooltips.less
+++ b/src/styles/objects/tooltips.less
@@ -63,7 +63,8 @@
 
         &:hover,
         &:focus
-        &:active {
+        &:active,
+        &.is-active {
             &:after,
             &:before {
                 opacity: 1;
@@ -86,7 +87,8 @@
             margin-bottom: -(@tooltip-arrow-size * 2);
         }
         &:hover,
-        &:focus {
+        &:focus,
+        &.is-active {
             &:after,
             &:before {
             transform: translate(-50%, -@tooltip-position);
@@ -104,7 +106,8 @@
             margin-top: -(@tooltip-arrow-size * 2);
         }
         &:hover,
-        &:focus {
+        &:focus,
+        &.is-active {
             &:after,
             &:before {
                 transform: translate(-50%, @tooltip-position);
@@ -133,7 +136,8 @@
             margin-right: -(@tooltip-arrow-size * 2);
         }
         &:hover,
-        &:focus {
+        &:focus,
+        &.is-active {
             &:after,
             &:before {
             transform: translate(-@tooltip-position, -50%);
@@ -151,7 +155,8 @@
             margin-left: -(@tooltip-arrow-size * 2);
         }
         &:hover,
-        &:focus {
+        &:focus,
+        &.is-active {
             &:after,
             &:before {
             transform: translate(@tooltip-position, -50%);
